--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,6 +1,10 @@
 ﻿body
 {
     padding: 1%;
-    background-image: url("../../assets/stock_images/photos_2018_2_14_fst_blurry-bokeh-hearts.jpg");
+    background-image: url("../stock_images/photos_2018_2_14_fst_blurry-bokeh-hearts.jpg");
     background-repeat: repeat;
+}
+body
+{
+    color: white;
 }
