--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -3,8 +3,6 @@
     padding: 1%;
     background-image: url("../img/stock_images/photos_2018_2_14_fst_blurry-bokeh-hearts.jpg");
     background-repeat: repeat;
-}
-body
-{
     color: white;
+    background-color: #1a202c;
 }
